# cyera-analysis

./: .gitignore  CLAUDE.md  overall_analysis_report.md  企业文档智能聚类系统V2.2_实施方案_含知识蒸馏.md
benchmark/: .gitignore  compare_accuracy.py  compare_large_bench.py  eval_heldout.py  pyproject.toml  retry_download.sh  run_all_perf.sh  setup.bat  setup.sh  test_gemma_latency.py  test_performance.py
benchmark/config/experiments/: doc-classifier-ben25.yaml  doc-classifier-cxh5types.yaml  doc-classifier-dspm27.yaml  flan-t5-base-ben25.yaml  flan-t5-base-conll03.yaml  flan-t5-base-cxh5types.yaml  flan-t5-base-dspm27.yaml  flan-t5-classification-defaults.yaml  flan-t5-defaults.yaml  flan-t5-finetune.yaml  flan-t5-large-20newsgroups.yaml  flan-t5-large-ben25.yaml  flan-t5-large-conll03.yaml  flan-t5-large-cxh5types.yaml  flan-t5-large-dspm27.yaml  flan-t5-large-german-multifin.yaml  flan-t5-large-ledgar.yaml  flan-t5-large-pii.yaml  flan-t5-small-ben25.yaml  flan-t5-small-cxh5types.yaml  (+5 more)
benchmark/docs/: models-and-datasets.md
benchmark/results/: accuracy-fix-2026-05-19_102809.md  finetune-eval-2026-05-21_030000.md  heldout-generalization-2026-05-22_164034.md  multidataset-compare-2026-05-19_201420.md  perf-2026-05-18_131009.md  unified-perf-2026-05-18_180030.md
benchmark/scripts/: run_finetune.py
benchmark/tests/: test_augment.py  test_conll03.py  test_data_pipeline.py  test_flan_t5.py  test_metrics.py  test_synthetic_pii.py  test_train_config.py  test_types.py
benchmark/train/: __init__.py  augment.py  config.py  data_pipeline.py  merge_adapter.py  trainer.py
(+176 files in other folders)
